Fixed pagination color for dark mode
Fixed pagination color for dark mode

--- a/react-frontend/internship-api-frontend/src/App.css
+++ b/react-frontend/internship-api-frontend/src/App.css
@@ -949,6 +949,10 @@ table{
     background-color: var(--card-background) !important;
   color: var(--text-color) !important;
 }
+.pagination-button.active {
+  background-color: var(--primary-color) !important;
+  color:var(--text-color);
+}
 
 .form-container{
   background-color: var(--background-color) !important;
