--- a/react-frontend/internship-api-frontend/src/components/layout/MasterPage.css
+++ b/react-frontend/internship-api-frontend/src/components/layout/MasterPage.css
@@ -127,7 +127,7 @@
 
 .nav-item.active {
   background-color: #000;
-  color: #FFD700;
+  color: var(--primary-color);
 }
 
 .nav-icon {
